# MY_bca_bus

./: .gitignore  BCA Bus Location - Locations.csv  Cargo.toml  Dioxus.toml  flake.nix
assets/: AndroidManifest.xml
assets/styling/: bus_display.css  main.css  nav_bar.css  notifications.css  search_bar.css
src/: main.rs
src/components/: bus_display.rs  mod.rs  nav_bar.rs  notifications.rs  search_bar.rs
